--- a/templates/chart.html
+++ b/templates/chart.html
@@ -37,9 +37,9 @@
             pointHoverRadius: 5,
             pointHoverBackgroundColor: "rgba(75,192,192,1)",
             pointHoverBorderColor: "rgba(220,220,220,1)",
-            pointHoverBorderWidth: 2,
+            pointHoverBorderWidth: 1,
             pointRadius: 1,
-            pointHitRadius: 10,
+            pointHitRadius: 1,
             data : [{% for item in values %}
                       {{item}},
                     {% endfor %}],
@@ -56,6 +56,9 @@
         data: chartData,
         options: {
             scales: {
+                xAxes: [{
+                        categorySpacing: 0
+                }],
                 yAxes: [{
                     ticks: {
                         beginAtZero:true
